--- a/python/Acquisition_RMN- FULL.ipynb
+++ b/python/Acquisition_RMN- FULL.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "99adc4ea",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
     "\n",
     "        # Créer le dossier local avec timestamp\n",
     "        now = datetime.datetime.now()\n",
-    "        nom_dossier_local = f\"{folder_name}-{now.strftime('%Y%m%d_%H%M%S')}\"\n",
+    "        nom_dossier_local = f\"mesures/{folder_name}-{now.strftime('%Y%m%d_%H%M%S')}\"\n",
     "        os.makedirs(nom_dossier_local, exist_ok=True)\n",
     "        \n",
     "        # Liste des fichiers à télécharger\n",
@@ -638,7 +638,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_hp",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
